--- a/src/components/styles/about.scss
+++ b/src/components/styles/about.scss
@@ -12,3 +12,10 @@ img {
   justify-content: center;
   margin: 0 auto;
 }
+
+.about-me {
+  background-color: grey;
+  color: black;
+  border-radius: 25px;
+  padding-bottom: 5px;
+}
