--- a/src/components/styles/projects.scss
+++ b/src/components/styles/projects.scss
@@ -1,4 +1,4 @@
-.project-list {
+.projects {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -14,19 +14,21 @@
   background-color: #f0f0f0;
   border-radius: 5%;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
   margin: 0 auto;
   margin-bottom: 20px;
 
   h3 {
     text-align: center;
     padding-left: 20px;
+    color: black;
   }
 
   li {
     list-style: none;
     display: flex;
     justify-content: space-evenly;
+    color: black;
+    text-align: center;
     
   }
   a {
@@ -54,62 +56,10 @@
   text-align: center;
 }
 
-.project-aside {
-  position: relative;
-  flex: 1 0 40%;
-}
-
-.project-aside img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
-
-.project-aside .btn {
-  position: absolute;
-  bottom: 1rem;
-  left: 1rem;
-  right: 1rem;
-  font-size: 0.9rem;
-  padding: 0.5rem;
-  background-color: #fff;
-  color: #333;
-  border: 2px solid #333;
-  border-radius: 2rem;
-  cursor: pointer;
-}
-
-.project-aside.right {
-  order: 1;
-}
-
-.project-aside.right .btn {
-  right: 1rem;
-  left: auto;
-}
-
 @media (max-width: 767px) {
   .project {
     width: 100%;
     height: auto;
-  }
-
-  .project-aside {
-    flex: 1 0 auto;
-  }
-
-  .project-aside img {
-    position: relative;
-    z-index: initial;
-  }
-
-  .project-aside .btn {
-    position: static;
-    margin-top: 1rem;
   }
 }
 
@@ -135,3 +85,11 @@ h1 {
   cursor: pointer;
 }
 
+.wrapper {
+  overflow: scroll;
+  height: 200px;
+}
+
+.project aside {
+  
+}
